fixing bug where the alert button is too small, addes django compressor

--- a/csv_schema/static/css/styles.css
+++ b/csv_schema/static/css/styles.css
@@ -18,7 +18,6 @@ body {
 
 .alert-container {
   position: absolute;
-  width: 290px;
   right: 0;
   text-align: right;
   padding-right: 15px;
